# satonomics-parser

./: .gitignore  Cargo.toml  run.sh  samply.sh  stop.sh
outputs/: first_block.json  sth copy.json  sth.json  sth_parr_test1.json  sth_parr_test2.json  sth_sync.json
price/close/: date.json
src/: chunks.rs  export_all.rs  iter_blocks.rs  lib.rs  main.rs  min_height.rs  parse_block.rs  run.rs  sth.rs
src/actions/: export_all.rs  iter_blocks.rs  min_height.rs  mod.rs  parse_block.rs
src/assets/: daily.json
src/bitcoin/: consts.rs  converters.rs  daemon.rs  group.rs  mod.rs
src/bitcoin/address/: multisig.rs
src/bitcoin/bitcoin_explorer/: bitcoin_db.rs  blk_files.rs  block_iter.rs  blocks_indexes.rs  errors.rs  mod.rs  multisig.rs  reader.rs  txdb.rs
src/bitcoin/db/: mod.rs
src/computers/: height_to_date.rs  height_to_price.rs  height_to_timestamp.rs  mod.rs
src/computers/address_based/: mod.rs
src/computers/block_based/: height_to_date.rs  height_to_timestamp.rs  mod.rs
src/computers/date_to_blocks/: structs.rs
src/databases/: _trait.rs  address_index_to_empty_address_data.rs  address_to_address_index.rs  metadata.rs  mod.rs  raw_address_to_address_index.rs  txid_to_tx_index.rs
src/datasets/: _traits.rs  block_metadata.rs  coinblocks.rs  coindays.rs  cointime.rs  date_metadata.rs  mining.rs  mod.rs  rewards.rs  transaction.rs  transaction_metadata.rs
src/io/: binary.rs  serialization.rs
src/parse/: address.rs  address_data.rs  address_realized_data.rs  address_size.rs  address_split.rs  address_type.rs  any_map.rs  bi_map.rs  block_data.rs  block_path.rs  counter.rs  database.rs  date_data.rs  date_map.rs  empty_address_data.rs  height_map.rs  liquidity.rs  mod.rs  partial_txout_data.rs  raw_address.rs  raw_address_split.rs  raw_address_type.rs  storage.rs  tx_data.rs  txout_index.rs  wnaivedate.rs
src/price/: binance.rs  kraken.rs
src/states/: _trait.rs  address_index_to_address_data.rs  counters.rs  date_data_vec.rs  mod.rs  price_to_block_path.rs  processed_addresses_split_states.rs  tx_index_to_tx_data.rs  txout_index_to_address_index.rs  txout_index_to_sats.rs
src/structs/: counter.rs  daemon.rs  database.rs  date_map.rs  height_datasets.rs  height_map.rs  mod.rs  txid_map.rs  txid_to_outputs.rs  wrapped_naivedate.rs  wrapped_txid.rs
src/traits/: database.rs  databases.rs  mod.rs  snapshot.rs
src/unused/: chunks_to_ages.rs
src/utils/: arr.rs  date.rs  deadlock.rs  export.rs  float.rs  import.rs  mod.rs  price.rs  time.rs
(+300 files in other folders)
