[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bincode = "2.0.0-rc.3"
bincode = { git = "https://github.com/bincode-org/bincode.git", features = [
    "serde",
] }
bitcoin = "0.31.1"
bitcoin_hashes = { version = "0.14.0" }
byteorder = "1.5.0"
chrono = { version = "0.4.37", features = ["serde"] }
color-eyre = "0.6.3"
db-key = "=0.0.5"
derive_deref = "1.1.1"
itertools = "0.12.1"
leveldb = "0.8.6"
ordered-float = "4.2.0"
par-iter-sync = "0.1.11"
parking_lot = { version = "0.12.1", features = ["serde"] }
rayon = "1.10.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
sanakirja = "1.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
speedy = "0.8.7"
