[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.2"
bitcoin_hashes = { version = "0.14.0" }
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
db-key = "=0.0.5"
derive_deref = "1.1.1"
itertools = "0.12.1"
leveldb = "0.8.6"
ordered-float = "4.2.0"
par-iter-sync = "0.1.11"
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
sanakirja = "1.4.2"
savefile = "0.16.5"
savefile-derive = "0.16.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
